[package]
name = "toggle_florp"
description = "A small tool to help you decide the next florp color."
version = "1.0.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"
homepage = "https://github.com/hardliner66/toggle_florp"
repository = "https://github.com/hardliner66/toggle_florp"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
